--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "cors": "^2.8.5",
     "lucide-react": "^0.424.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
